--- a/configure_macOS.in
+++ b/configure_macOS.in
@@ -3,7 +3,7 @@ PLATFORM = MacOS
 #PLATFORM = LINUX
 
 ifeq ($(PLATFORM),MacOS)
-GFORTRAN_NAME = gfortran-mp-4.7
+GFORTRAN_NAME = gfortran-mp-4.8
 else
 GFORTRAN_NAME = gfortran
 endif
@@ -32,12 +32,10 @@ C_COMPILER = $(GCC_NAME)
 ##############################################################################
 ##LAPACK lib, mandatory if you use any data (WMAP, ACT, SPT, SNLS3yr)
 
-LAPACK = 
-#$(HOME)/includes/lapack-3.4.2
+LAPACK = $(HOME)/includes/lapack-3.4.2
 
 ##FFTW lib (v3.2 up)
-FFTW3=
-#$(HOME)/includes/fftw3
+FFTW3 = $(HOME)/includes/fftw3
 
 ## gsl lib 
 GSL =
@@ -45,12 +43,10 @@ GSL =
 
 
 ##cfitsio lib, mandatory if you do mapio
-CFITSIO = 
-#$(HOME)/work/scilibs/cfitsio
+CFITSIO = $(HOME)/work/scilibs/cfitsio
 
 ##Healpix lib, mandatory if you do mapio
-HEALPIX = 
-#$(HOME)/work/scilibs/Healpix
+HEALPIX = $(HOME)/work/scilibs/Healpix
 
 ####################### the rest ##########################################
 #should automatically work if you are using $(IFORT_NAME) or $(GFORTRAN_NAME); 
@@ -176,7 +172,7 @@ ifneq ($(FFTW3),)
 LINK += -L$(FFTW3)/lib -lfftw3 -lfftw3_mpi
 FFLAGS += -DHAS_FFTW=1
 CFLAGS += -DHAS_FFTW=1
-INCLUDE += -I$(FFTW3)/include -I$(FFTW)/include/fftw3
+INCLUDE += -I$(FFTW3)/include 
 endif
 
 ###set gsl flags here
@@ -193,9 +189,9 @@ ifeq ($(PLATFORM),MacOS)
 LINK += -framework Accelerate
 else
 LINK += -L$(LAPACK) -llapack -lblas
+INCLUDE += -I$(LAPACK)
 endif
 FFLAGS += -DHAS_LAPACK=1
 CFLAGS += -DHAS_LAPACK=1
-INCLUDE += -I$(LAPACK)
 endif
 
