--- a/postprocess/example.ini
+++ b/postprocess/example.ini
@@ -2,6 +2,7 @@ root = ../../cosmomcplanck/chains/pp10_wb
 output = plots/
 discard_percent = 25
 
+want1d = omegabh2, omegach2, theta, tau, ns, nrun, logA, r, omegam, omgal, sigmai, H0, w, wa, epss, epsinf, zetas, fdm, nnu, yhe, tcmb, a2s1s
 want2d =
 
 wantpca =
