--- a/postprocess/example.ini
+++ b/postprocess/example.ini
@@ -6,8 +6,8 @@ want1d = omegabh2, omegach2, theta, tau, ns, nrun, logA, r, omegam, omgal, sigma
 want2d =
 
 wantpca =
-color2d_light = 
-color2d_dark = 
+color2d_1sigma = 
+color2d_2sigma = 
 
 bestfit_cl_file = 
 #planckbest_lensedtotCls.dat
