coupled DE: use m^2/H^2 upper bound

--- a/firstorder/Makefile
+++ b/firstorder/Makefile
@@ -37,13 +37,13 @@ testZ: $(OBJ) testzeta.o $(BACKGROUND)/libcoopbackground.a
 
 
 clean:
-	rm -f *.o *.*~ *.mod \#* *.a Makefile~ Test DOCLS
+	rm -f *.o *.*~ *.mod \#* *.a Makefile~ Test DOCLS OneMode
 
 
 firstorder.o:	pertobj.o  ../include/firstorder_equations.h ../include/firstorder_source.h ../include/recfast_source.h ../include/recfast_head.h
 wrapper.o: 	firstorder.o lensing.o Cls_post_process.o
 test.o:		wrapper.o
-test_one_mode.o:		wrapper.o
+test_one_mode.o: wrapper.o
 Cls_post_process.o: firstorder.o lensing.o
 zeta.o:	wrapper.o
 testzeta.o:	wrapper.o
