add export_dictionary function

--- a/forecast/Makefile
+++ b/forecast/Makefile
@@ -18,6 +18,11 @@ default: $(LIB)
 $(LIB):	$(OBJ) 
 	ar -r $@ $?
 
+Test:	test.o 
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) test.o $(LINK)
+
+
+
 clean:
 	rm -f *.o *.*~ *.mod \#* *.a Makefile~ 
 
