--- a/forecast/Makefile
+++ b/forecast/Makefile
@@ -10,8 +10,7 @@ include ../configure.in
 include ../compile_rules.in
 
 LIB = libcoopforecast.a
-OBJ = forecast.o 
-
+OBJ = cliklike.o forecast.o 
 
 default: $(LIB)
 
@@ -19,8 +18,11 @@ $(LIB):	$(OBJ)
 	ar -r $@ $?
 
 Test:	test.o $(OBJ)
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) test.o $(LINK)
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) test.o $(LINK) 
 
+
+DoSN:	test.o $(OBJ)
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) testSN.o $(LINK) 
 
 
 clean:
