--- a/forecast/myinis/std6.ini
+++ b/forecast/myinis/std6.ini
@@ -18,3 +18,5 @@ param[cal_217] = 1 0.95 1.05 0.001 0.001
 param[xi_sz_cib] = 0.1 0 1 .2 .2
 param[A_ksz] = 1 0 10 .7 0.7
 param[Bm_1_1] = 0.3 -20 20 0.3 0.3
+param[alpha_JLA] =  0.14 0.01 2. 0.005 0.005
+param[beta_JLA] = 3.1 0.9 4.6 0.05 0.05
