--- a/forecast/myinis/qcdm.ini
+++ b/forecast/myinis/qcdm.ini
@@ -3,6 +3,7 @@ param[omch2] = 0.12029 0.05 0.2 0.01 0.01
 param[tau] = 0.0925 0.01 0.3 0.01 0.01
 param[de_Q] = 0.01 0. 0.5 0.01 0.01
 param[de_n_tracking] = 0.02 0. 2. 0.02 0.03
+param[de_dUdphi] = 0. -1. 1. 0.1 0.1
 param[theta] = 1.04122 0.8 1.2 0.001 0.001
 param[logA] = 3.098 2.  4.  0.01 0.01 
 param[ns] = 0.9624 0.5 1.5 0.01 0.01
