--- a/forecast/Makefile
+++ b/forecast/Makefile
@@ -28,6 +28,9 @@ DOSN:	testSN.o $(OBJ)
 DOCLIK:	testclik.o $(OBJ)
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) testclik.o $(LINK) 
 
+STD6:	teststd6.o $(OBJ)
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) teststd6.o $(LINK) 
+
 
 clean:
 	rm -f *.o *.*~ *.mod \#* *.a Makefile~ 
