--- a/postprocess/example.ini
+++ b/postprocess/example.ini
@@ -1,8 +1,8 @@
-root = ../../cosmomcplanck/chains/pp10_wb
+root = ../forecast/chains/planck
 output = plots/
 discard_percent = 25
 
-want1d = omegabh2, omegach2, theta, tau, ns, nrun, logA, r, omegam, omgal, sigmai, H0, w, wa, epss, epsinf, zetas, fdm, nnu, yhe, tcmb, a2s1s
+want1d = omegabh2, omegach2, theta, tau, ns, nrun, logA, deQ
 want2d =
 
 wantpca =
