--- a/forecast/myinis/qcdm.ini
+++ b/forecast/myinis/qcdm.ini
@@ -26,4 +26,5 @@ param[beta_JLA] = 3.1 0.9 4.6 0.05 0.05
 
 chain_name = chains/qcdm    
 paramnames = paramnames/qcdm.paramnames    
-propose_matrix = covmats/qcdm.covmat
+propose_matrix = 
+last_slow = ns
