--- a/forecast/myinis/teststd6.ini
+++ b/forecast/myinis/teststd6.ini
@@ -1,4 +1,4 @@
-param[ombh2] = 0.022
+param[ombh2] = 0.022 
 param[omch2] = 0.12
 param[tau] = 0.08
 param[theta] = 1.041
@@ -19,4 +19,8 @@ param[xi_sz_cib] = 0.1
 param[A_ksz] = 1 
 param[Bm_1_1] = 0.3 
 param[alpha_JLA] =  0.14 
-param[beta_JLA] = 3.1
+param[beta_JLA] = 3.1 3. 3.2 0.01 0.01
+
+chain_name = chains/test
+paramnames= paramnames/std6.paramnames
+last_slow = ns
