--- a/forecast/myinis/qcdm.ini
+++ b/forecast/myinis/qcdm.ini
@@ -26,5 +26,10 @@ param[beta_JLA] = 3.1 0.9 4.6 0.05 0.05
 
 chain_name = chains/qcdm    
 paramnames = paramnames/qcdm.paramnames    
-propose_matrix = 
+propose_matrix =
+
+#this sets the last slow parameter
 last_slow = ns
+
+#do overwrite chains? 
+overwrite = F
