--- a/forecast/myinis/std6.ini
+++ b/forecast/myinis/std6.ini
@@ -23,4 +23,6 @@ param[beta_JLA] = 3.1 0.9 4.6 0.05 0.05
 
 chain_name = chains/std6
 paramnames = paramnames/std6.paramnames    
-propose_matrix = 
+propose_matrix =
+last_slow = ns
+overwrite = F
