--- a/forecast/myinis/qcdm.ini
+++ b/forecast/myinis/qcdm.ini
@@ -26,7 +26,7 @@ param[beta_JLA] = 3.1 0.9 4.6 0.05 0.05
 
 chain_name = chains/qcdm    
 paramnames = paramnames/qcdm.paramnames    
-propose_matrix =
+propose_matrix = covmats/qcdm.covmat
 
 #this sets the last slow parameter
 last_slow = ns
