--- a/forecast/myinis/std6.ini
+++ b/forecast/myinis/std6.ini
@@ -23,6 +23,6 @@ param[beta_JLA] = 3.1 0.9 4.6 0.05 0.05
 
 chain_name = chains/lcdm
 paramnames = paramnames/std6.paramnames    
-propose_matrix = covmats/lcdm.covmats
+propose_matrix = covmats/lcdm.covmat
 last_slow = ns
 overwrite = F
