fix comoving_dA bug

--- a/forecast/myinis/std6.ini
+++ b/forecast/myinis/std6.ini
@@ -1,9 +1,9 @@
-param[ombh2] = 0.022068
-param[omch2] = 0.12029
-param[tau] = 0.0925
-param[theta] = 1.04122
-param[logA] = 3.098
-param[ns] = 0.9624
+param[ombh2] = 0.022
+param[omch2] = 0.12
+param[tau] = 0.08
+param[theta] = 1.041
+param[logA] = 3.1
+param[ns] = 0.96
 param[A_ps_100] = 153 0 360 27 27
 param[A_ps_143] = 54.9 0 270 4.5 4.5
 param[A_ps_217] = 55.8 0 450 7.2 7.2
@@ -26,3 +26,8 @@ paramnames = paramnames/std6.paramnames
 propose_matrix = covmats/lcdm.covmat
 last_slow = ns
 overwrite = F
+
+use_CMB = T
+use_SN = T
+use_BAO = T
+use_HST = T
