put action into ini file

--- a/forecast/myinis/teststd6.ini
+++ b/forecast/myinis/teststd6.ini
@@ -21,6 +21,7 @@ param[Bm_1_1] = 0.3
 param[alpha_JLA] =  0.14 
 param[beta_JLA] = 3.1 
 
+action = TEST
 chain_name = chains/test
 paramnames= paramnames/std6.paramnames
 last_slow = ns
