--- a/forecast/myinis/std6.ini
+++ b/forecast/myinis/std6.ini
@@ -21,6 +21,7 @@ param[Bm_1_1] = 0.3 -20 20 0.3 0.3
 param[alpha_JLA] =  0.14 0.01 2. 0.005 0.005
 param[beta_JLA] = 3.1 0.9 4.6 0.05 0.05
 
+action = TEST
 chain_name = chains/lcdm
 paramnames = paramnames/std6.paramnames    
 propose_matrix = covmats/lcdm.covmat
