add plot growth

--- a/firstorder/Makefile
+++ b/firstorder/Makefile
@@ -33,6 +33,10 @@ MCLS: $(OBJ) test_mult_cls.o $(BACKGROUND)/libcoopbackground.a
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) test_mult_cls.o $(LINK)
 
 
+MGR: $(OBJ) test_mult_growth.o $(BACKGROUND)/libcoopbackground.a 
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) test_mult_growth.o $(LINK)
+
+
 Test: $(OBJ) test.o $(BACKGROUND)/libcoopbackground.a 
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) test.o $(LINK)
 
