--- a/forecast/myinis/qcdm_noCMB.ini
+++ b/forecast/myinis/qcdm_noCMB.ini
@@ -13,14 +13,15 @@ param[beta_JLA] = 3.1 0.9 4.6 0.05 0.05
 action = MCMC
 chain_name = chains/qcdm_noCMB   
 paramnames = paramnames/qcdm_noCMB.paramnames    
-propose_matrix = 
+propose_matrix = covmats/qcdm_noCMB.covmat
+update_propose = T
 
 #this sets the last slow parameter
 last_slow = ns
 
 #do overwrite chains? 
 overwrite = F
-feedback = 3
+feedback = 2
 
 use_CMB = F
 use_lensing = F
