--- a/forecast/myinis/qcdm.ini
+++ b/forecast/myinis/qcdm.ini
@@ -28,7 +28,8 @@ action = MCMC
 chain_name = chains/qcdm    
 paramnames = paramnames/qcdm.paramnames    
 propose_matrix = covmats/qcdm.covmat
-
+update_propose = T
+feedback = 0
 #this sets the last slow parameter
 last_slow = ns
 
