--- a/forecast/myinis/wcdm.ini
+++ b/forecast/myinis/wcdm.ini
@@ -1,8 +1,11 @@
 param[omegam] = 0.3 0.01 0.99 0.02 0.02
 param[omegak] = 0.
-param[w] = -1. -3. 1. 0.08 0.1
-param[wa] = 0
+param[w] = -1. -3. 1. 0.08 0.2
+param[wa] = 0. -3. 3 0.1 0.2
 
+prior[omegam] = 0.3 0.02
+prior[w] = -1.  0.05
+prior[wa] = 0.  0.5
 chain_name = chains/wcdm
 paramnames = paramnames/wcdm.paramnames
 propose_matrix = 
