also use others

--- a/forecast/myinis/qcdm_bg.ini
+++ b/forecast/myinis/qcdm_bg.ini
@@ -26,6 +26,6 @@ feedback = 1
 use_CMB = F
 use_lensing = F
 use_compressed_CMB = T
-use_SN = F
-use_BAO = F
-use_HST = F
+use_SN = T
+use_BAO = T
+use_HST = T
