better ini file

--- a/forecast/myinis/qcdm_bg.ini
+++ b/forecast/myinis/qcdm_bg.ini
@@ -1,9 +1,9 @@
-param[ombh2] = 0.02228 0.005 0.1 0.001 0.001
-param[omch2] = 0.1197 0.05 0.2 0.01 0.01
-param[theta] = 1.04085 0.8 1.2 0.0003 .0003
+param[ombh2] = 0.02228 0.01 0.1 0.00024 0.00024
+param[omch2] = 0.1197 0.00 0.2 0.0023 0.0023
+param[theta] = 1.04085 0.8 1.2 0.00048 0.00048
 param[tau] = 0.08
-param[de_Q] = 0.02 0. 0.5 0.02 0.03
-param[de_n_tracking] = 0.02 0. 2. 0.02 0.03
+param[de_Q] = 0.02 0. 0.5 0.05 0.05
+param[de_n_tracking] = 0.02 0. 2. 0.05 0.05
 param[de_dUdphi] = 0. -1. 1. 0.1 0.1
 param[logA] = 3.098
 param[ns] = 0.9624
