MPI_sync cov mat

--- a/forecast/myinis/qcdm_noCMB.ini
+++ b/forecast/myinis/qcdm_noCMB.ini
@@ -1,9 +1,9 @@
-param[ombh2] = 0.022068 0.005 0.1 0.001 0.001
-param[omch2] = 0.12029 0.05 0.2 0.01 0.01
-param[theta] = 1.04109 0.8 1.2 0.0003 .0003
+param[ombh2] = 0.022068 0.005 0.1 0.0003 0.0003
+param[omch2] = 0.12029 0.05 0.2 0.003 0.003
+param[theta] = 1.04109 0.8 1.2 0.0005 .0005
 param[tau] = 0.08
-param[de_Q] = 0.02 0. 0.5 0.02 0.03
-param[de_n_tracking] = 0.02 0. 2. 0.02 0.03
+param[de_Q] = 0.02 0. 0.5 0.05 0.05
+param[de_n_tracking] = 0.02 0. 2. 0.05 0.05
 param[de_dUdphi] = 0. -1. 1. 0.1 0.1
 param[logA] = 3.098
 param[ns] = 0.9624
@@ -13,15 +13,15 @@ param[beta_JLA] = 3.1 0.9 4.6 0.05 0.05
 action = MCMC
 chain_name = chains/qcdm_noCMB   
 paramnames = paramnames/qcdm_noCMB.paramnames    
-propose_matrix = covmats/qcdm_noCMB.covmat
+propose_matrix =
 update_propose = T
 
 #this sets the last slow parameter
-last_slow = ns
+#last_slow = ns
 
 #do overwrite chains? 
 overwrite = F
-feedback = 2
+feedback = 1
 
 use_CMB = F
 use_lensing = F
