--- a/configure.in
+++ b/configure.in
@@ -15,7 +15,7 @@ ICC_NAME=icc
 ######## compiler options  #######
 ### YES or NO
 #### distributed memory (you should have a compiler alias mpif77 or mpif90 installed); This is used to generate multiple chains when doing MCMC.
-USE_MPI = NO
+USE_MPI = YES
 MPI_COMPILER_ALIAS = mpif90
 #### shared memory; 
 USE_OPENMP = YES
@@ -35,7 +35,8 @@ C_COMPILER = $(GCC_NAME)
 LAPACK = $(HOME)/includes/lapack-3.4.2
 
 ##FFTW lib (v3.2 up)
-FFTW3 = $(HOME)/includes/fftw3
+FFTW3 =
+#$(HOME)/includes/fftw3
 
 ## gsl lib 
 GSL =
@@ -101,6 +102,8 @@ FC = $(MPI_COMPILER_ALIAS)
 FFLAGS += -DMPI
 CFLAGS += -DMPI
 INCLUDE += -I/usr/local/include
+#for my macOS
+INCLUDE += -I/opt/local/include/openmpi-gcc48/  
 else
 FC = $(FORTRAN_COMPILER)
 endif
