--- a/forecast/myinis/qcdm_noCMB.ini
+++ b/forecast/myinis/qcdm_noCMB.ini
@@ -14,7 +14,7 @@ action = MCMC
 chain_name = chains/qcdm_noCMB   
 paramnames = paramnames/qcdm_noCMB.paramnames    
 propose_matrix =
-update_propose = T
+update_seconds = 60
 
 #this sets the last slow parameter
 #last_slow = ns
