--- a/forecast/myinis/qcdm_noCMB.ini
+++ b/forecast/myinis/qcdm_noCMB.ini
@@ -14,10 +14,10 @@ action = MCMC
 chain_name = chains/qcdm_noCMB   
 paramnames = paramnames/qcdm_noCMB.paramnames    
 propose_matrix =
-update_seconds = 30
+update_seconds = 10
 
 #this sets the last slow parameter
-#last_slow = ns
+last_slow = ns
 
 #do overwrite chains? 
 overwrite = F
