change ini files

--- a/forecast/myinis/qcdm_eps.ini
+++ b/forecast/myinis/qcdm_eps.ini
@@ -28,7 +28,7 @@ action = MCMC
 chain_name = chains/qcdm_eps    
 paramnames = paramnames/qcdm_eps.paramnames    
 propose_matrix = covmats/qcdm.covmat
-update_propose = T
+update_seconds = 1800
 
 #this sets the last slow parameter
 last_slow = ns
