--- a/forecast/myinis/std6.ini
+++ b/forecast/myinis/std6.ini
@@ -27,6 +27,7 @@ paramnames = paramnames/std6.paramnames
 propose_matrix = covmats/lcdm.covmat
 last_slow = ns
 overwrite = F
+update_seconds = 1800
 
 use_CMB = T
 use_SN = T
