--- a/forecast/myinis/teststd6.ini
+++ b/forecast/myinis/teststd6.ini
@@ -25,6 +25,7 @@ action = TEST
 chain_name = chains/test
 paramnames= paramnames/std6.paramnames
 last_slow = ns
+update_seconds = 1800
 
 use_CMB = F
 use_SN = F
