--- a/forecast/myinis/qcdm.ini
+++ b/forecast/myinis/qcdm.ini
@@ -28,7 +28,7 @@ action = MCMC
 chain_name = chains/qcdm    
 paramnames = paramnames/qcdm.paramnames    
 propose_matrix = covmats/qcdm.covmat
-update_propose = T
+update_seconds = 1800
 feedback = 0
 #this sets the last slow parameter
 last_slow = ns
