--- a/forecast/myinis/qcdm_bg.ini
+++ b/forecast/myinis/qcdm_bg.ini
@@ -14,7 +14,7 @@ action = MCMC
 chain_name = chains/qcdm_bg
 paramnames = paramnames/qcdm_noCMB.paramnames    
 propose_matrix = 
-update_propose = T
+update_seconds = 300
 
 #this sets the last slow parameter
 #last_slow =
