add epsilon_s parametrization

--- a/background/Makefile
+++ b/background/Makefile
@@ -21,12 +21,18 @@ Test: $(BGOBJ) test.o  ../include/background.h $(UTILS)/libcooputils.a
 TestDE: $(BGOBJ) testde.o  ../include/background.h $(UTILS)/libcooputils.a
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(BGOBJ) testde.o $(LINK)
 
+FEPS: $(BGOBJ) fiteps.o  ../include/background.h $(UTILS)/libcooputils.a
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(BGOBJ) fiteps.o $(LINK)
+
+TEPS: $(BGOBJ) epstbl.o  ../include/background.h $(UTILS)/libcooputils.a
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(BGOBJ) epstbl.o $(LINK)
+
 
 PlotData: $(BGOBJ) plotdata.o ../include/background.h $(UTILS)/libcooputils.a
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(BGOBJ) plotdata.o $(LINK)
 
 clean:
-	rm -f *.o *.*~ *.mod \#* *.a Makefile~ Test TestDE
+	rm -f *.o *.*~ *.mod \#* *.a Makefile~ Test TestDE TEPS FEPS
 
 test.o:   $(BGOBJ)
 testde.o:   $(BGOBJ)
