--- a/forecast/myinis/qcdm.ini
+++ b/forecast/myinis/qcdm.ini
@@ -1,9 +1,11 @@
 param[ombh2] = 0.022068 0.005 0.1 0.001 0.001
 param[omch2] = 0.12029 0.05 0.2 0.01 0.01
 param[tau] = 0.0925 0.01 0.3 0.01 0.01
-param[de_Q] = 0.01 0. 0.5 0.01 0.01
-param[de_n_tracking] = 0.02 0. 2. 0.02 0.03
-param[de_dUdphi] = 0. -1. 1. 0.1 0.1
+param[de_Q] = 0.03 0. 0.5 0.04 0.04
+param[de_dlnQdphi] = 0
+param[de_epss] = 0.05 0. 2. 0.08 0.08
+param[de_epsinf] = 0.1 0. 1. 0.1 0.1
+param[de_zetas] = 0. -1. 1. 0.1 0.1
 param[theta] = 1.04122 0.8 1.2 0.001 0.001
 param[logA] = 3.098 2.  4.  0.01 0.01 
 param[ns] = 0.9624 0.5 1.5 0.01 0.01
