--- a/forecast/myinis/qcdm_bg.ini
+++ b/forecast/myinis/qcdm_bg.ini
@@ -3,8 +3,8 @@ param[omch2] = 0.1197 0.00 0.2 0.0023 0.0023
 param[theta] = 1.04085 0.8 1.2 0.00048 0.00048
 param[tau] = 0.08
 param[de_Q] = 0.02 0. 0.5 0.05 0.05
-param[de_n_tracking] = 0.02 0. 2. 0.05 0.05
-param[de_dUdphi] = 0. -1. 1. 0.1 0.1
+param[de_epss] = 0.1 0. 1.5 0.05 0.05
+param[de_epsinf] = 0.1 0. 1. 0.05 0.05
 param[logA] = 3.098
 param[ns] = 0.9624
 param[alpha_JLA] =  0.14 0.01 2. 0.005 0.005
@@ -17,11 +17,12 @@ propose_matrix =
 update_seconds = 300
 
 #this sets the last slow parameter
-#last_slow =
+last_slow = ns
 
 #do overwrite chains? 
 overwrite = F
 feedback = 1
+total_steps = 10000
 
 use_CMB = F
 use_lensing = F
