change ini files

--- a/forecast/myinis/qcdm_bg.ini
+++ b/forecast/myinis/qcdm_bg.ini
@@ -5,6 +5,7 @@ param[tau] = 0.08
 param[de_Q] = 0.02 0. 0.5 0.03 0.03
 param[de_epss] = 0.1 0. 1.5 0.03 0.03
 param[de_epsinf] = 0.1 0. 1. 0.03 0.03
+param[de_zetas] = 0.
 param[logA] = 3.098
 param[ns] = 0.9624
 param[alpha_JLA] =  0.14 0.01 2. 0.005 0.005
@@ -21,7 +22,7 @@ last_slow = ns
 
 #do overwrite chains? 
 overwrite = F
-feedback = 4
+feedback = 2
 total_steps = 10000
 
 use_CMB = F
