--- a/forecast/myinis/std6.ini
+++ b/forecast/myinis/std6.ini
@@ -28,6 +28,8 @@ propose_matrix = covmats/lcdm.covmat
 last_slow = ns
 overwrite = F
 update_seconds = 1800
+feedback = 2
+total_steps = 10000
 
 use_CMB = T
 use_SN = T
