--- a/forecast/myinis/qcdm_bg.ini
+++ b/forecast/myinis/qcdm_bg.ini
@@ -14,15 +14,15 @@ param[beta_JLA] = 3.1 0.9 4.6 0.05 0.05
 action = MCMC
 chain_name = chains/qcdm_bg
 paramnames = paramnames/qcdm_noCMB.paramnames    
-propose_matrix = 
-update_seconds = 500
+propose_matrix = covmats/qcdm_bg.covmat
+update_seconds = 10
 
 #this sets the last slow parameter
 last_slow = ns
 
 #do overwrite chains? 
 overwrite = F
-feedback = 2
+feedback = 4
 total_steps = 10000
 
 use_CMB = F
