--- a/forecast/myinis/qcdm_bg.ini
+++ b/forecast/myinis/qcdm_bg.ini
@@ -14,8 +14,8 @@ param[beta_JLA] = 3.1 0.9 4.6 0.05 0.05
 action = MCMC
 chain_name = chains/qcdm_bg
 paramnames = paramnames/qcdm_noCMB.paramnames    
-propose_matrix = covmats/qcdm_bg.covmat
-update_seconds = 10
+propose_matrix = 
+update_seconds = 1500
 
 #this sets the last slow parameter
 last_slow = ns
