add convergence test

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -37,3 +37,7 @@ test.o: $(LIB)
 ode.o:	../include/dverk.h
 
 integrate.o:	../include/qromb.h
+
+$(LIB): wrapper.o
+
+wrapper.o:  MPIutils.o specfunc.o list.o random.o matrix.o interpolation.o integrate.o ode.o file_io.o ndprob.o asy.o  fft.o jlbrute.o  inifile.o gaussian_peak.o 
