MPI_barrier for chain load

--- a/forecast/myinis/qcdm.ini
+++ b/forecast/myinis/qcdm.ini
@@ -31,9 +31,10 @@ chain_name = chains/qcdm
 paramnames = paramnames/qcdm.paramnames    
 propose_matrix = covmats/qcdm.covmat
 update_seconds = 1800
-feedback = 0
+feedback = 3
 #this sets the last slow parameter
 last_slow = ns
+approx_frac = 0.6
 
 #do overwrite chains? 
 overwrite = F
