fix the new matsym_inverse bug

--- a/mapio/Makefile
+++ b/mapio/Makefile
@@ -39,6 +39,9 @@ GetCl: $(OBJ) getcls.o
 Test: $(OBJ) test.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) test.o $(LINK)
 
+Inpaint: $(OBJ) testinp.o
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) testinp.o $(LINK)
+
 
 F2H: $(OBJ) flat2heal.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) flat2heal.o $(LINK)
