--- a/utils/Makefile
+++ b/utils/Makefile
@@ -6,7 +6,7 @@ include ../configure.in
 include ../compile_rules.in
 
 LIB = libcooputils.a
-OBJ = MPIutils.o specfunc.o list.o random.o matrix.o interpolation.o integrate.o ode.o file_io.o ndprob.o asy.o  fft.o jlbrute.o  inifile.o gaussian_peak.o  wrapper.o 
+OBJ = MPIutils.o specfunc.o list.o random.o cholesky.o matrix.o interpolation.o integrate.o ode.o file_io.o ndprob.o asy.o  fft.o jlbrute.o  inifile.o gaussian_peak.o  wrapper.o 
 #jllpm.o  threejs.o
 
 default: $(LIB)
@@ -29,7 +29,7 @@ Dec: $(OBJ) decrypt.o $(TYPEDEF)/libcooptypedef.a
 
 
 clean:
-	rm -f *.o *.*~ *.mod \#* *.a Makefile~ Test
+	rm -f *.o *.*~ *.mod \#* *.a Makefile~ Test MPLOT Dec Enc
 
 
 test.o: $(LIB)
@@ -40,4 +40,4 @@ integrate.o:	../include/qromb.h
 
 $(LIB): wrapper.o
 
-wrapper.o:  MPIutils.o specfunc.o list.o random.o matrix.o interpolation.o integrate.o ode.o file_io.o ndprob.o asy.o  fft.o jlbrute.o  inifile.o gaussian_peak.o 
+wrapper.o:  MPIutils.o specfunc.o list.o random.o cholesky.o matrix.o interpolation.o integrate.o ode.o file_io.o ndprob.o asy.o  fft.o jlbrute.o  inifile.o gaussian_peak.o 
