--- a/configure_local.in
+++ b/configure_local.in
@@ -15,7 +15,7 @@ ICC_NAME=icc
 ######## compiler options  #######
 ### YES or NO
 #### distributed memory (you should have a compiler alias mpif77 or mpif90 installed); This is used to generate multiple chains when doing MCMC.
-USE_MPI = NO
+USE_MPI = YES
 MPI_COMPILER_ALIAS = mpif90
 #### shared memory; 
 USE_OPENMP = YES
@@ -35,12 +35,14 @@ C_COMPILER = $(GCC_NAME)
 LAPACK = $(HOME)/includes/lapack-3.4.2
 
 ##FFTW lib (v3.2 up)
-FFTW3 = $(HOME)/includes/fftw3
+FFTW3 =
+#$(HOME)/includes/fftw3
 
 ## gsl lib 
 GSL =
 #$(HOME)/mathlib/gsl
 
+CLIKPATH = $(HOME)/work/scilibs/COOP/forecast/plc-1.0/
 
 ##cfitsio lib, mandatory if you do mapio
 CFITSIO = $(HOME)/work/scilibs/cfitsio
@@ -100,6 +102,8 @@ FC = $(MPI_COMPILER_ALIAS)
 FFLAGS += -DMPI
 CFLAGS += -DMPI
 INCLUDE += -I/usr/local/include
+#for my macOS
+INCLUDE += -I/opt/local/include/openmpi-gcc48/  
 else
 FC = $(FORTRAN_COMPILER)
 endif
@@ -195,3 +199,9 @@ FFLAGS += -DHAS_LAPACK=1
 CFLAGS += -DHAS_LAPACK=1
 endif
 
+### set clik flags
+ifneq ($(CLIKPATH),)
+LINK += -L$(CLIKPATH)/lib -lclik_f90
+INCLUDE += -I$(CLIKPATH)/include 
+FFLAGS += -DHAS_CLIK=1
+endif
